# hack-the-north-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  assets.cpp  assets.hpp  body_component.hpp  bullet_component.hpp  bullet_system.cpp  bullet_system.hpp  color.hpp  direction.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  flipbook.hpp  flipbook_component.cpp  flipbook_component.hpp  flipbook_system.cpp  flipbook_system.hpp  formatter.hpp  ground_mover_component.hpp  ground_mover_system.cpp  ground_mover_system.hpp  health_component.cpp  health_component.hpp  health_regen_component.hpp  health_system.cpp  health_system.hpp  image.cpp  image.hpp  image_component.cpp  image_component.hpp  input.cpp  input.hpp  level.cpp  level.hpp  log.hpp  logger.cpp  (+49 more)
data/: level.json
